--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-<img src="static/music.png" style="position: fixed;z-index: 10001;top:10px;right:10px;" onclick="let m = document.querySelector('.song-audio-autoplay'); if (m.paused ) {m.play(); this.className = 'rotateImages'} else {m.pause(); this.className = ''}">
-<audio class="song-audio-autoplay" controls loop style="display: none;visibility: hidden">
-    <source src="static/wanan-yanrenzhong.mp3"></source>
+<img src="static/music.png" style="position: fixed;z-index: 10001;top:10px;right:10px;" id="icon_play_mp3" onclick="let m = document.querySelector('.song-audio-autoplay'); if (m.paused ) {m.play(); this.className = 'rotateImages'} else {m.pause(); this.className = ''}">
+<audio class="song-audio-autoplay" controls autoplay loop style="display: none;visibility: hidden">
+    <source src="static/Beautiful-In-White-Shayne-Ward.mp3"></source>
     Your browser isn't invited for super fun audio time.
 </audio>
 <style type="text/css">
@@ -105,7 +105,9 @@
 
 </div>
 
-
+<script>
+    
+</script>
 <script src="config.js"></script>
 <script src="static/index.js"></script>
 </body>
