--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div style="width:100%;max-width:500px;margin:0 auto;position: relative;">
     <div class="pass-time">
-        <p class="finalText"></p>
+        <p class="finalText" style="font-size: 18px;"></p>
         <p>
             Ngày
             <span class="kwy days"></span>
